--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="style.css">
         <link href="https://fonts.googleapis.com/css?family=Special+Elite&display=swap" rel="stylesheet">
     </head>
-    <body>
+    <body id="theBody">
         <div id="quote-box">
             <p id="text"></p>
             <p id="author"></p>
